Task 6: added orders REST API, swagger doc serving
