# book-store/orders/cmd/book-store-orders/main.go
@@ -5,6 +5,9 @@ import (
 	"fmt"
 	"log"
 	"net"
+	"os"
+	"os/signal"
+	"time"
 
 	"github.com/Vesninovich/go-tasks/book-store/common/catalog"
 	"github.com/Vesninovich/go-tasks/book-store/common/orders"
@@ -12,6 +15,7 @@ import (
 	ordergrpc "github.com/Vesninovich/go-tasks/book-store/orders/grpc"
 	orderservice "github.com/Vesninovich/go-tasks/book-store/orders/order/service"
 	ordersql "github.com/Vesninovich/go-tasks/book-store/orders/order/sql"
+	"github.com/Vesninovich/go-tasks/book-store/orders/rest"
 	_ "github.com/jackc/pgx/v4/stdlib"
 	"github.com/jmoiron/sqlx"
 	"google.golang.org/grpc"
@@ -28,7 +32,7 @@ import (
 // @license.name ISC
 // @license.url https://www.isc.org/licenses/
 
-// @host localhost:8002
+// @host localhost:8004
 // @BasePath /
 
 // @tag.name Order
@@ -36,6 +40,8 @@ import (
 
 const dbURL = "postgresql://gobookstoreorders@localhost:5432/gobookstore"
 const catalogURL = "localhost:8001"
+const grpcHost = "localhost:8003"
+const restHost = "localhost:8004"
 const schema = "orders"
 const bufsize = 1024 * 1024
 
@@ -45,17 +51,18 @@ func main() {
 	db, r := initSQL()
 	defer db.Close()
 
-	cConn, err := grpc.Dial(catalogURL, grpc.WithInsecure())
+	cConn, err := grpc.Dial(catalogURL, grpc.WithInsecure(), grpc.WithBlock(), grpc.WithTimeout(5*time.Second))
 	if err != nil {
 		log.Fatalf("Failed to connect to catalog service on %s: %s", catalogURL, err)
 	}
 	defer cConn.Close()
+	log.Println("Connected to catalog gRPC service")
 
-	lis, err := net.Listen("tcp", "localhost:8002")
+	lis, err := net.Listen("tcp", grpcHost)
 	if err != nil {
 		log.Fatalf("Failed to listen due to %s", err)
 	}
-	log.Println("Listening on localhost:8002")
+	log.Println("Listening on " + grpcHost)
 
 	cc := catalog.NewCatalogClient(cConn)
 	c := catalogservice.New(cc)
@@ -64,7 +71,28 @@ func main() {
 	grpcServer := grpc.NewServer()
 	orders.RegisterOrdersServer(grpcServer, ordergrpc.New(s))
 	log.Println("Starting gRPC server")
-	grpcServer.Serve(lis)
+	go func() {
+		if err = grpcServer.Serve(lis); err != nil {
+			log.Fatalf("Failed to start gRPC server: %s", err)
+		}
+	}()
+
+	restServer := rest.New(restHost, "/order", s)
+	log.Println("Starting REST server on " + restHost)
+	go func() {
+		if err = restServer.Start(); err != nil {
+			log.Fatalf("Failed to start REST server: %s", err)
+		}
+	}()
+
+	// Run until interrupt
+	sig := make(chan os.Signal)
+	signal.Notify(sig, os.Interrupt)
+	<-sig
+	fmt.Println("SIGINT")
+	grpcServer.GracefulStop()
+	db.Close()
+	os.Exit(0)
 }
 
 func initSQL() (*sqlx.DB, *ordersql.Repository) {
